[package]
name = "cemtexer"
version = "0.1.3"
edition = "2021"
authors = ["Geoffrey Borough <geoffrey.borough@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/gborough/cemtexer"
repository = "https://github.com/gborough/cemtexer"
documentation = "https://docs.rs/cemtexer"
description = """
An utility for generating and validating Australian Banking Association
Cemtex file format
"""
keywords = ["aba", "csv", "cemtex", "parser"]
categories = ["command-line-utilities", "encoding", "parser-implementations"]
publish = ["crates-io"]

[dependencies]
nom = "7.1.3"
csv = "1.2.2"
rand = "0.8.5"
regex = "1.8.4"
thiserror = "1.0.40"
lazy_static = "1.4.0"
async-trait = "0.1.68"
serde = { version = "1.0.164", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"] }
clap = { version = "4.3.5", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
time = { version = "0.3.22", features = ["formatting", "macros", "parsing"] }

[profile.release]
lto = "thin"
opt-level = 2
strip = "debuginfo"

